--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "firebase": "^9.22.2",
     "formik": "^2.4.2",
     "mui": "^0.0.1",
     "react": "^18.2.0",
@@ -20,6 +21,7 @@
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.7.12",
     "swiper": "^8.4.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
