--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "firebase": "^9.22.2",
     "formik": "^2.4.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.0",
@@ -20,6 +22,7 @@
     "react-scripts": "5.0.1",
     "sweetalert": "^2.1.2",
     "swiper": "^8.4.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
