--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
-    "bootstrap": "^5.3.0",
+    "firebase": "^9.23.0",
     "formik": "^2.4.2",
     "google-login-react": "^0.2.17",
     "react": "^18.2.0",
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "sweetalert": "^2.1.2",
     "swiper": "^8.4.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
