--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "firebase": "^9.23.0",
     "formik": "^2.4.2",
     "google-login-react": "^0.2.17",
     "mui": "^0.0.1",
